fix(docs): readable theme

--- a/docs/assets/style/app-shell.css
+++ b/docs/assets/style/app-shell.css
@@ -11,30 +11,56 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 16px;
-  color: #000;
+  color: #000d;
 
-  --primary-color: #009687;
-  --primary-color-light: #52c7b7;
-  --primary-color-dark: #00675a;
-  --secondary-color: #96000f;
-  --secondary-color-light: #ce4336;
-  --secondary-color-dark: #620000;
-  --text-on-primary: #000;
-  --text-on-secondary: #fff;
+  --primary-color: #00796b;
+  --primary-color-light: #48a999;
+  --primary-color-dark: #004c40;
+  --secondary-color: #ffc400;
+  --secondary-color-light: #fff64f;
+  --secondary-color-dark: #c79400;
+
+  --neutral-color: #000;
+  --neutral-color-900: #212121;
+  --neutral-color-800: #424242;
+  --neutral-color-700: #616161;
+  --neutral-color-600: #757575;
+  --neutral-color-500: #9e9e9e;
+  --neutral-color-400: #bdbdbd;
+  --neutral-color-300: #e0e0e0;
+  --neutral-color-200: #eeeeee;
+  --neutral-color-100: #f5f5f5;
+  --neutral-color-50: #fafafa;
+  --neutral-color-0: #fff;
+
+  --text-on-primary: var(--neutral-color-0);
+  --text-on-primary-light: var(--neutral-color);
+  --text-on-primary-dark: var(--neutral-color-0);
+  --text-on-secondary: var(--neutral-color);
+
+  --link-color: #3344dd;
+
+  --elevation-1-shadow: 0 1px 3px rgba(0, 0, 0, 0.12),
+    0 1px 2px rgba(0, 0, 0, 0.24);
+  --elevation-2-shadow: 0 3px 6px rgba(0, 0, 0, 0.16),
+    0 3px 6px rgba(0, 0, 0, 0.23);
+  --elevation-3-shadow: 0 10px 20px rgba(0, 0, 0, 0.19),
+    0 6px 6px rgba(0, 0, 0, 0.23);
+  --elevation-4-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
+    0 10px 10px rgba(0, 0, 0, 0.22);
+  --elevation-5-shadow: 0 19px 38px rgba(0, 0, 0, 0.3),
+    0 15px 12px rgba(0, 0, 0, 0.22);
 }
+
 a {
   font-weight: 500;
-  color: #006dfb;
+  color: var(--link-color);
   text-decoration: none;
-}
-a[target="_blank"]:after {
-  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' aria-hidden='true' x='0px' y='0px' viewBox='0 0 100 100' width='15' height='15' class='icon outbound'%3E%3Cpath fill='#4b4b4b' d='M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z'%3E%3C/path%3E%3Cpolygon fill='#4b4b4b' points='45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9'%3E%3C/polygon%3E%3C/svg%3E");
-  vertical-align: middle;
 }
 
 p a code {
   font-weight: 400;
-  color: #006dfb;
+  color: var(--link-color);
 }
 
 h1,
@@ -61,7 +87,7 @@ h1 {
 h2 {
   font-size: 1.65rem;
   padding-bottom: 0.3rem;
-  border-bottom: 1px solid #eaecef;
+  border-bottom: 1px solid var(--neutral-color-300);
 }
 h3 {
   font-size: 1.35rem;
@@ -89,9 +115,10 @@ a.header-anchor:hover {
   background-color: var(--primary-color);
   color: var(--text-on-primary);
   box-sizing: border-box;
-  border-bottom: 1px solid #eaecef;
+  border-bottom: 1px solid #0001;
   padding: 0.7rem 1.5rem;
   line-height: 2.2rem;
+  box-shadow: var(--elevation-3-shadow);
 }
 .navbar a,
 .navbar span,
@@ -130,9 +157,14 @@ a.header-anchor:hover {
 }
 .nav-links a {
   line-height: 1.4rem;
+}
+.navbar .nav-links a {
   color: var(--text-on-primary);
 }
-.nav-links a:hover,
+.sidebar .nav-links a {
+  color: var(--neutral-color);
+}
+
 .nav-links a.router-link-active {
   font-weight: bold;
 }
@@ -171,7 +203,7 @@ a.header-anchor:hover {
   left: 0;
   bottom: 0;
   box-sizing: border-box;
-  border-right: 1px solid #eaecef;
+  border-right: 1px solid var(--neutral-color-300);
   overflow-y: auto;
 }
 
@@ -185,7 +217,7 @@ a.header-anchor:hover {
 }
 .sidebar .nav-links {
   display: none;
-  border-bottom: 1px solid #eaecef;
+  border-bottom: 1px solid var(--neutral-color-300);
   padding: 0.5rem 0 0.75rem 0;
 }
 .sidebar .nav-links a {
@@ -206,8 +238,8 @@ a.header-anchor:hover {
   line-height: 1.7;
   font-weight: bold;
 }
-.sidebar > .sidebar-links > li:not(:first-child) {
-  margin-top: 0.75rem;
+.sidebar > .sidebar-links > li:not(:first-child) > a {
+  padding-top: 0.75rem;
 }
 .sidebar .sidebar-sub-headers {
   padding-left: 1rem;
@@ -224,12 +256,14 @@ a.sidebar-link {
   width: 100%;
   box-sizing: border-box;
 }
-a.sidebar-link:hover {
-  color: var(--secondary-color);
+a.sidebar-link:hover,
+.sidebar .nav-item:hover {
+  background-color: var(--secondary-color-light);
 }
-a.sidebar-link.active {
+a.sidebar-link.active,
+.sidebar .nav-item.active {
   font-weight: 600;
-  color: var(--secondary-color);
+  background-color: var(--secondary-color-light);
   border-left-color: var(--secondary-color);
 }
 .sidebar-group a.sidebar-link {
@@ -339,7 +373,8 @@ details[open] summary ~ * {
   }
 }
 
-.lang-selector a.router-link-active::after {
+.lang-selector a.router-link-active::after,
+.lang-selector a:hover::after {
   content: "";
   width: 0;
   height: 0;
