--- a/docs/assets/style/app-shell_large.css
+++ b/docs/assets/style/app-shell_large.css
@@ -1,13 +1,10 @@
-.nav-links a:hover,
-.nav-links a.router-link-active {
-  color: var(--secondary-color);
-}
-
-.nav-item > a:not(.external).router-link-active {
+.nav-item > a:not(.external).router-link-active,
+.nav-item > a:not(.external):hover {
   margin-bottom: -2px;
   border-bottom: 2px solid var(--secondary-color);
 }
 
-.lang-selector .nav-item > a.router-link-active {
+.lang-selector .nav-item > a.router-link-active,
+.lang-selector .nav-item > a:hover {
   border-bottom: none;
 }
